# rust-async-server-fetch

./: Cargo.toml
src/: main.rs  server_crasher.rs
