[package]
name = "osobnitestik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking"] }
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
futures = "0.3.28"
futures-test = "0.3.28"
